--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,7 @@
     <li> top players regex expressions now key to capitalized tags (i.e. mango -> Mango) </li>
     <li> /user page now displays all tournaments a User has placed in, along with his respective placement </li>
     <li> /head_to_head page now displays all mutual tournaments attended and placings two users have </li>
+    <li> /head-to-head main display is no longer an independent table </li>
   </ul></div></div>
   </div>
 
