--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -44,42 +44,23 @@
     <!--<h2>Head-to-Head between {{ tag1 }} and {{ tag2 }}</h2>-->
     <div class="panel panel-default">
     <div class="panel-heading">
-      <table class="table bootstrap-datatable table-condensed">
-        <tr>
-          <th class="col-md-3 text-right horizontal-overflow">
-            <h2><b>{{ tag1 }} -</h2></b>
-          </th>
-
-          <th class="col-md-3 text-left horizontal-overflow">
-            <h2><b>{{ tag2 }}</b></h2>
-          </th>
-        </tr>
-
-        <tr>
-          <th class="col-md-3 text-right">
-            <h3><b>{{ user1_set_win_count }} -</b></h3>
-          </th>
-          <th class="col-md-3 text-left">
-            <h3><b>{{ user2_set_win_count }}</b></h3>
-          </th>
-        </tr>
-      </table>
+      <h2><b>{{ tag1 }} vs {{ tag2 }}</b></h2>
+      <h2><b>{{ user1_set_win_count }} - {{ user2_set_win_count }}</b></h2>
     </div>
     <div class="panel-body">
     <table class="table bootstrap-datatable">
       <thead>
         <tr>
-          <th><b>Total Sets Played: {{ user1_set_win_count + user2_set_win_count }}</b></th>
-          <th><b>Total Matches Played: {{ h2h_matches_played|length + user1_score_matches_won +  user2_score_matches_won }}</b></th>
-          <th><b>Tournament History</b></th>
+          <th class="col-sm-3 text-center"><b>Total Sets Played: {{ user1_set_win_count + user2_set_win_count }}</b></th>
+          <th class="col-sm-3 text-center"><b>Total Matches Played: {{ h2h_matches_played|length + user1_score_matches_won +  user2_score_matches_won }}</b></th>
         </tr>
       </thead>
 
       <tbody>
         <tr>
-          <td>{{ tag1 }} [{{ user1_set_win_count }}-{{ user2_set_win_count }}] vs {{ tag2 }}</td>
+          <td class="col-sm-3 text-center">{{ tag1 }} [{{ user1_set_win_count }}-{{ user2_set_win_count }}] vs {{ tag2 }}</td>
           
-          <td>{{ tag1 }} [{{ user1_match_win_count + user1_score_matches_won }}-{{ user2_match_win_count + user2_score_matches_won }}] vs {{ tag2 }}</td>
+          <td class="col-sm-3 text-center">{{ tag1 }} [{{ user1_match_win_count + user1_score_matches_won }}-{{ user2_match_win_count + user2_score_matches_won }}] vs {{ tag2 }}</td>
 
           <!-- In current version of Smashstats, no Match info available
           <td>Battlefield: {{ h2h_stages_played["Battlefield"]|length }}</td>
