prepare body for postgres

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -34,13 +34,11 @@
     </h3>
 
     <h3>
-    <!-- Route to edit User 
+    <!-- Route to edit User; Not used in this version of Smashstats
     <a href="{{ url_for("user_edit", user=user.tag) }}">Edit User</a>
     -->
     </h3>
-
   </header>
-  <hr>
 
   <!-- Table for displaying User's Tournament History -->
   <div class="panel panel-default">
