--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
   <div class="thumbnail"><div class="caption scroll400"><h5> July 12, 2015 </h5>
   <ul>
     <li> soft fix to allow data for final brackets from Challonge tournaments with pools to enter the database properly. </li>
+    <li> parse functions no longer print extraneous data to avoid crashing due to ASCII-Unicode conversion failures </li>
   </ul></div></div>
   </div>
 
