--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -14,7 +14,7 @@
 				<tr>
 					<th>Date</th>
 					<th>Tournament</th>
-					<th>Number of Entrants</th>
+					<th>Entrants</th>
 				</tr>
 			</thead>
 
