--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -74,9 +74,10 @@
   </div>
   <div class="panel-body">
     <table class="table bootstrap-datatable table-hover">
+            <h4>Total Sets: {{ user_sets|length }} | Record: [{{user_wins|length}}-{{user_losses|length}}]</h4>
       <thead>
         <tr>
-          <th>Total Sets: {{ user_sets|length }} | Record: [{{user_wins|length}}-{{user_losses|length}}]</th>
+          <th></th>
           <th></th>
           <th></th>
           <th></th>
