--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -10,27 +10,31 @@
     {{ form.hidden_tag() }} <!-- this template argument will get replaced with hidden field that enables CSRF prevention in config. -->
 
     <div class="row"> 
-      <div class="col-md-6">
+      <div class="col-md-6 col-xs-6">
         <h2 class="text-left"><b>Player 1</b></h2>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-6 col-xs-6">
         <h2 class="text-right"><b>Player 2</b></h2>
       </div>
     </div>
 
     <div class="row"> 
-      <div class="col-md-3">
+      <div class="col-md-3 col-xs-5">
         <div class="text-left">{{ form.user1(size=15, class="form-control") }}</div>
       </div>
 
-      <div class="col-md-4 col-md-offset-1">
+
+      <div class="col-md-offset-6 col-md-3 col-xs-offset-2 col-xs-5">
+        <div class="text-right">{{ form.user2(size=15, class="form-control") }}</div>
+      </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2">
         <!-- Customized button input -->
         <div class="text-center"><input class="btn-primary form-control" type="submit" value="Look up Head-to-Head"></div>
-      </div>
-
-      <div class="col-md-offset-1 col-md-3">
-        <div class="text-right">{{ form.user2(size=15, class="form-control") }}</div>
       </div>
     </div>
 
