--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -7,11 +7,11 @@
   <header class="jumbotron">
     <h1>About Smashstats</h1>
 
-    <p>Smashstats tracks the stats of tournament-level players in the eSports Super Smash Bros. Melee scene. It parses data from tournament brackets and neatly presents statistics of tournament attendance, comprehensive set records, and head to head histories between players. </p>
+    <p>The application recognizes and sorts players by tag and associates them with the sets and tournaments they have played in. Top players are remembered and all references to them are matched to their tag, without sponsor or team information. </p>
 
-    <p>The application recognizes and sorts players by tag and associates them with the sets and tournaments they have played in. You may search for a particular player or tournament using the search form in the navigation bar at the top of the page, or browse the database using the other links in the navigation bar.</p>
+    <p>Currently, Smashstats only accepts bracket data from Challonge, meaning that no match information can be automatically generated. Additionally, no player information is automatically entered besides their tag and their set history; this information includes region, main, and secondary characters. </p>
 
-    <p>Currently, Smashstats only accepts bracket data from Challonge, meaning that no match information can be automatically generated. Additionally, no player information is automatically entered besides their tag and set history; this information includes region, main, and secondary characters. The tournament database currently holds final bracket data for all Nationals since 2015.</p>
+    <p><b>In its current state, this application does not claim to represent a fully comprehensive record of all player set and tournament histories, but is rather a proof for automated stats tracking. The tournament database currently only holds data from the Final Brackets of all national or major tournaments in 2015.</b></p>
 
     <p>If you are interested in this project and would like to contribute, contact the developers at: <a href="mailto:smashstats@example.com"><b>smashstats@gmail.com</b></a></p>
 
