--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='enno/css/style.css') }}">
 
 <!-- Optional theme -->
+<link rel="stylesheet" href="{{ url_for('static', filename='enno/css/google_fonts.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='enno/css/bootstrap-theme.css') }}">
 
 <!-- Latest compiled and minified JavaScript -->
