--- a/app/templates/update_log.html
+++ b/app/templates/update_log.html
@@ -1,6 +1,13 @@
   <div class="col-sm-3 hero-feature">
   <div class="thumbnail"><div class="caption scroll400"><h5> July 12, 2015 </h5>
   <ul>
+    <li> added function parse_challonge_tournamentlist to read from a text file containing tournaments and running the challonge parsing functions on each tournament </li>
+  </ul></div></div>
+  </div> 
+
+  <div class="col-sm-3 hero-feature">
+  <div class="thumbnail"><div class="caption scroll400"><h5> July 12, 2015 </h5>
+  <ul>
     <li> soft fix to allow data for final brackets from Challonge tournaments with pools to enter the database properly. </li>
     <li> parse functions no longer print extraneous data to avoid crashing due to ASCII-Unicode conversion failures </li>
   </ul></div></div>
