added /tournament_manual_entry function to manually enter tournament data

--- a/app/templates/update_log.html
+++ b/app/templates/update_log.html
@@ -2,6 +2,7 @@
   <div class="thumbnail"><div class="caption scroll400"><h5> July 12, 2015 </h5>
   <ul>
     <li> added function parse_challonge_tournamentlist to read from a text file containing tournaments and running the challonge parsing functions on each tournament </li>
+    <li> added /tournament_manual_entry function to manually enter tournament data </li>
   </ul></div></div>
   </div> 
 
