added twitter share and follow buttons in base footer

--- a/app/templates/update_log.html
+++ b/app/templates/update_log.html
@@ -3,6 +3,7 @@
   <ul>
     <li> added function parse_challonge_tournamentlist to read from a text file containing tournaments and running the challonge parsing functions on each tournament </li>
     <li> added /tournament_manual_entry function to manually enter tournament data </li>
+    <li> added twitter share and follow buttons in base footer </li>
   </ul></div></div>
   </div> 
 
