--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -72,7 +72,7 @@
   </div>
   <div class="panel-body">
     <table class="table bootstrap-datatable table-hover">
-            <h4>Total Sets: {{ user_sets|length }} | Record: [{{user_wins|length}}-{{user_losses|length}}]</h4>
+            <h4 class="text-center">Total Sets: {{ user_sets|length }} | Record: [{{user_wins|length}}-{{user_losses|length}}]</h4>
       <thead>
         <tr>
           <th></th>
