explicitly defined column widths to work better on mobile, updated templating

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -7,13 +7,11 @@
   <header class="jumbotron">
     <h1>About Smashstats</h1>
 
-    <p>The application recognizes and sorts players by tag and associates them with the sets and tournaments they have played in. Top players are remembered and all references to them are matched to their tag, without sponsor or team information. </p>
+    <p>The application recognizes and sorts players by tag and associates them with the sets and tournaments they have played in. Top players are remembered and all references to them are matched to their tag, without sponsor or team information. Currently, Smashstats only accepts bracket data from Challonge, meaning that no match information can be automatically generated. Additionally, no player information is automatically entered besides their tag and their set history; this information includes region, main, and secondary characters. </p>
 
-    <p>Currently, Smashstats only accepts bracket data from Challonge, meaning that no match information can be automatically generated. Additionally, no player information is automatically entered besides their tag and their set history; this information includes region, main, and secondary characters. </p>
+    <p><b>In its current state, SmashStats does not claim to represent a fully comprehensive record of all players' set and tournament histories, but rather is a proof of concept for widespread stats tracking. The tournament database presently only contains data from the Final Brackets of all national or major tournaments that have happened in 2015.</b></p>
 
-    <p><b>In its current state, this application does not claim to represent a fully comprehensive record of all player set and tournament histories, but is rather a proof for automated stats tracking. The tournament database currently only holds data from the Final Brackets of all national or major tournaments in 2015.</b></p>
-
-    <p>If you are interested in this project and would like to contribute, contact the developers at: <a href="mailto:smashstats@example.com"><b>smashstats@gmail.com</b></a></p>
+    <p>If you are interested in this project and would like to contribute, contact the developers at <a href="mailto:smashstats@example.com"><b>smashstats@gmail.com</b></a>, or connect with us through our social media accounts.</p>
 
   </header>
 </div>
