--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -12,9 +12,9 @@
 		<table class="table bootstrap-datatable table-hover">
 			<thead>
 				<tr>
-					<th>Date</th>
-					<th>Tournament</th>
-					<th>Entrants</th>
+					<th class="text-center"><h4><b>Date</h4></b></th>
+					<th class="text-center"><h4><b>Tournament</h4></b></th>
+					<th class="text-center"><h4><b>Entrants</h4></b></th>
 				</tr>
 			</thead>
 
