--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
     <h1>Welcome to SmashStats!</h1>
     <!-- <div><h3><a href="{{url_for("browse_tournaments")}}">Browse Recent Tournaments</a></h3></div> -->
     <p>
-      Smashstats tracks the stats of tournament-level players in the eSports Super Smash Bros. Melee scene. It parses data from tournament brackets and neatly presents statistics of tournament attendance, comprehensive set records, and head to head histories between players. <a href="{{ url_for('about') }}"><b>Learn More</b></a>
+      Smashstats tracks the stats of tournament-level players in the eSports Super Smash Bros. Melee scene. It parses data from tournament brackets and neatly presents selected statistics of tournament attendance, set records, and head to head histories between players. <a href="{{ url_for('about') }}"><b>Learn More</b></a>
     </p>
   </header>
 </div>
