--- a/app/templates/update_log.html
+++ b/app/templates/update_log.html
@@ -4,6 +4,7 @@
     <li> added function parse_challonge_tournamentlist to read from a text file containing tournaments and running the challonge parsing functions on each tournament </li>
     <li> added /tournament_manual_entry function to manually enter tournament data </li>
     <li> added twitter share and follow buttons in base footer </li>
+    <li> explicitly defined column widths to work better on mobile, updated templating </li>
   </ul></div></div>
   </div> 
 
