--- a/app/templates/update_log.html
+++ b/app/templates/update_log.html
@@ -5,6 +5,7 @@
     <li> added /tournament_manual_entry function to manually enter tournament data </li>
     <li> added twitter share and follow buttons in base footer </li>
     <li> explicitly defined column widths to work better on mobile, updated templating </li>
+    <li> head-to-head and sets now emphasize the user with the win or winning record </li>
   </ul></div></div>
   </div> 
 
