--- a/app/templates/set.html
+++ b/app/templates/set.html
@@ -9,13 +9,13 @@
 		{% endif %}
 	</b></td>
 
-	<td class="col-sm-3 text-right horizontal-overflow"><b>
-		<a href="{{url_for("user", tag=set.winner_tag)}}">{{ set.winner_tag }}</a> [{{ set.winner_score }} - {{ set.loser_score }}]
-  </b></td>
+	<td class="col-sm-3 text-right horizontal-overflow">
+		<a href="{{url_for("user", tag=set.winner_tag)}}"><b>{{ set.winner_tag }}</b></a> [{{ set.winner_score }} - {{ set.loser_score }}]
+  </td>
         
-  <td class="col-sm-3 text-left horizontal-overflow"><b>
+  <td class="col-sm-3 text-left horizontal-overflow">
 		<a href="{{url_for("user", tag=set.loser_tag)}}">{{ set.loser_tag }}</a> 
-	</b></td>
+	</td>
 
 	<td class="col-sm-3 text-right">
   	<a href="{{url_for("head_to_head", tag1=set.winner_tag, tag2=set.loser_tag)}}"> View Head-to-Head</a>
