--- a/app/templates/update_log.html
+++ b/app/templates/update_log.html
@@ -6,6 +6,7 @@
     <li> added twitter share and follow buttons in base footer </li>
     <li> explicitly defined column widths to work better on mobile, updated templating </li>
     <li> head-to-head and sets now emphasize the user with the win or winning record </li>
+    <li> /head_to_head now explicitly displays text if search fails, rather than flashes </li>
   </ul></div></div>
   </div> 
 
