--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
 	<br>
 	<br>
   <header class="jumbotron">
