--- a/app/templates/update_log.html
+++ b/app/templates/update_log.html
@@ -1,5 +1,12 @@
   <div class="col-sm-3 hero-feature">
-  <div class="thumbnail"><div class="caption scroll400"><h5> July 12, 2015 </h5>
+  <div class="thumbnail"><div class="caption scroll400"><h5> July 14, 2015 </h5>
+  <ul>
+    <li> centered set displays and readjusted columns </li>
+  </ul></div></div>
+  </div> 
+
+  <div class="col-sm-3 hero-feature">
+  <div class="thumbnail"><div class="caption scroll400"><h5> July 13, 2015 </h5>
   <ul>
     <li> added function parse_challonge_tournamentlist to read from a text file containing tournaments and running the challonge parsing functions on each tournament </li>
     <li> added /tournament_manual_entry function to manually enter tournament data </li>
