--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -57,7 +57,7 @@
 
       {% for tournament in user_placements %}
       <tr>
-        <td class="col-sm-6 text-right"><b><a href="{{ url_for("tournament", tournament_name=tournament) }}">{{ tournament }}:</a></b></td>
+        <td class="col-sm-6 text-right"><b><a href="{{ url_for("tournament", tournament_name=tournament) }}">{{ tournament }} - </a></b></td>
         <td class="col-sm-6 text-left"><b> {{ user_placements[tournament] }} </b></td>
       </tr>
       {% endfor %}
@@ -72,9 +72,10 @@
   </div>
   <div class="panel-body">
     <table class="table bootstrap-datatable table-hover">
-            <h4 class="text-center">Total Sets: {{ user_sets|length }} | Record: [{{user_wins|length}}-{{user_losses|length}}]</h4>
+      <b><h4 class="text-center">Total Sets: {{ user_sets|length }} | Overall Record: [{{user_wins|length}}-{{user_losses|length}}]</b></h4>
       <thead>
         <tr>
+          <th></th>
           <th></th>
           <th></th>
           <th></th>
