disabled routes not used in version 1.0

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -104,14 +104,7 @@
               <input type="submit" class="btn-primary form-control" value="Search">
             </form>
           </li>
-          <!-- Not needed currently
-          <li>
-            <a href="{{ url_for('browse_characters') }}">Browse Characters</a>
-          </li>
-          <li>
-            <a href="{{ url_for('browse_regions') }}">Browse Regions</a>
-          </li>
-          -->
+          <!-- /browse_regions, /browse_characters not valid routes in Version 1.0 -->
         </ul>
       </div>
       <!-- /.navbar-collapse -->
