--- a/app/templates/update_log.html
+++ b/app/templates/update_log.html
@@ -2,6 +2,7 @@
   <div class="thumbnail"><div class="caption scroll400"><h5> July 14, 2015 </h5>
   <ul>
     <li> centered set displays and readjusted columns </li>
+    <li> disabled routes not used in version 1.0 </li>
   </ul></div></div>
   </div> 
 
