--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -18,7 +18,6 @@
         <a href="{{ url_for("character", character=user.main) }}">{{user.main}}</a>
       {% else %}
         Unchosen
-        <!-- <a href="{{ url_for("character", character="Unchosen") }}">Unchosen</a> -->
         {% endif %}
     </h3>
 
@@ -33,11 +32,7 @@
       {% endif %}
     </h3>
 
-    <h3>
-    <!-- Route to edit User; Not used in this version of Smashstats
-    <a href="{{ url_for("user_edit", user=user.tag) }}">Edit User</a>
-    -->
-    </h3>
+    <!-- Route to edit User; Not used in version 1.0 -->
   </header>
 
   <!-- Table for displaying User's Tournament History -->
