--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -13,6 +13,14 @@
 
     <p>If you are interested in this project and would like to contribute, contact the developers at <a href="mailto:smashstats@example.com"><b>smashstats@gmail.com</b></a>, or connect with us through our social media accounts.</p>
 
+    <div>Features planned for v2.0</div>
+    <ul>
+    	<li> ELO system </li>
+    	<li> Increased local and regional support </li>
+    	<li> Tournament data from Liquipedia, SmashGG, as well as match data </li>
+    	<li> support for user-inputted and edited player profiles </li>
+    </ul>
+
   </header>
 </div>
 {% endblock %}
