--- a/app/static/enno/css/bootstrap-theme.css
+++ b/app/static/enno/css/bootstrap-theme.css
@@ -78,17 +78,19 @@
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff337ab7', endColorstr='#ff265a88', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   background-repeat: repeat-x;
-  border-color: #245580;
+  border-color: #fff;
 }
 .btn-primary:hover,
 .btn-primary:focus {
+  /* Button hover color */
   background-color: #CAB566;
   background-position: 0 -15px;
 }
 .btn-primary:active,
 .btn-primary.active {
-  background-color: #265a88;
-  border-color: #245580;
+  /* button color on click */
+  background-color: #CAB566;
+  border-color: #CAB566;
 }
 .btn-primary:disabled,
 .btn-primary[disabled] {
