--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,9 +27,9 @@
     <link rel="icon" type="image/png" sizes=16x16 href="{{ url_for('static',filename='favicon.ico') }}">
 
     {% if title %}
-      <title>{{ title }} - Matchstats</title>
+      <title>{{ title }} - SmashStats</title>
     {% else %}
-      <title>Matchstats</title>
+      <title>SmashStats</title>
     {% endif %}
 
     <!-- Google Analytics -->
@@ -129,7 +129,7 @@
   <hr>
   <div class="container-fluid">
     <footer>
-      <b>©2015 SmashStats | <a style="color: #E8E8E8" href="mailto:smashstats@example.com">smashstats@gmail.com</a> | Version 0.99</b>
+      <b>©2015 SmashStats | <a style="color: #E8E8E8" href="mailto:smashstats@example.com">smashstats@gmail.com</a> | Version 1.0</b>
       <br>
 
       <!-- Facebook like/share button -->
