--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -52,8 +52,8 @@
 
       {% for tournament in user_placements %}
       <tr>
-        <td class="col-sm-6 text-right"><b><a href="{{ url_for("tournament", tournament_name=tournament) }}">{{ tournament }} - </a></b></td>
-        <td class="col-sm-6 text-left"><b> {{ user_placements[tournament] }} </b></td>
+        <td class="col-xs-6 col-sm-6 text-right"><b><a href="{{ url_for("tournament", tournament_name=tournament) }}">{{ tournament }} - </a></b></td>
+        <td class="col-xs-6 col-sm-6 text-left"><b> {{ user_placements[tournament] }} </b></td>
       </tr>
       {% endfor %}
     </table>
