--- a/app/templates/tournament.html
+++ b/app/templates/tournament.html
@@ -70,7 +70,7 @@
   {% else %}
 
   <!-- "Table" Column Titles -->
-  <table class="table bootstrap-datatable table-condensed table-responsive table-hover">
+  <table class="table bootstrap-datatable table-condensed table-hover">
     <!-- Empty header (generates navy-colored divider) -->
     <thead>
       <tr>
