--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,6 +49,7 @@
   </head>
 
   <body>
+    <div class="mobile-wrapper"
     <!-- Facebook App Stuff -->
     <script>
     window.fbAsyncInit = function() {
@@ -153,6 +154,6 @@
       </script>
     </footer>
   </div>
-  
+  </div>
   </body>
 </html>
