added Facebook like button meta tags

--- a/app/templates/set.html
+++ b/app/templates/set.html
@@ -18,7 +18,7 @@
   </td>
         
   <td class="col-md-3 text-left mobile-horizontal-overflow horizontal-overflow">
-		<a href="{{url_for("user", tag=set.loser_tag)}}"><b>{{ set.loser_tag }}</b></a> 
+		<a href="{{url_for("user", tag=set.loser_tag)}}">{{ set.loser_tag }}</a> 
 	</td>
 
 	<td class="col-md-2 text-right mobile-horizontal-overflow horizontal-overflow">
