--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,6 +23,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
 
+    <!-- Facebook meta tags for 'like' button -->
+    <meta property="og:title" content="SmashStats">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://smashstats.herokuapp.com/">
+    <meta property="og:site_name" content="SmashStats">
+    <meta property="fb:app_id" content="1587149311552603">
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes=16x16 href="{{ url_for('static',filename='favicon.ico') }}">
 
