--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -19,6 +19,14 @@
     	<li> support for user-inputted and edited player profiles </li>
     </ul>
     </p>
+    <p class="text-center"> Support us! Donations help keep our server running.
+    </p>
+    <form class="text-center" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+    <input type="hidden" name="cmd" value="_s-xclick">
+    <input type="hidden" name="hosted_button_id" value="7SZNGHVFNVF7W">
+    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    </form>
 
   </header>
 </div>
